--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "reveal-md": "bin/server-cli.js"
     },
     "dependencies": {
-        "reveal.js": "*",
+        "reveal.js": "2.6.0",
         "express": "2.5.9",
         "mustache": "0.4.0",
         "open": "0.0.3",
