--- a/package.json
+++ b/package.json
@@ -1,21 +1,28 @@
 {
-    "name": "reveal-md",
-    "description": "reveal.js on steroids! Get beautiful reveal.js presentations from your Markdown files.",
-    "keywords": ["markdown", "reveal", "revealjs", "html", "server", "cli"],
-    "version": "0.0.7",
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/webpro/reveal-md.git"
-    },
-    "bin": {
-        "reveal-md": "bin/server-cli.js"
-    },
-    "dependencies": {
-        "reveal.js": "2.6.0",
-        "express": "2.5.9",
-        "mustache": "0.4.0",
-        "open": "0.0.3",
-        "glob": "3.2.1",
-        "commander": "1.2.0"
-    }
+  "name": "reveal-md",
+  "description": "reveal.js on steroids! Get beautiful reveal.js presentations from your Markdown files.",
+  "keywords": [
+    "markdown",
+    "reveal",
+    "revealjs",
+    "html",
+    "server",
+    "cli"
+  ],
+  "version": "0.0.8",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/webpro/reveal-md.git"
+  },
+  "bin": {
+    "reveal-md": "bin/server-cli.js"
+  },
+  "dependencies": {
+    "reveal.js": "2.6.0",
+    "express": "2.5.9",
+    "mustache": "0.4.0",
+    "open": "0.0.3",
+    "glob": "3.2.1",
+    "commander": "1.2.0"
+  }
 }
