Revert package info back to origin

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "version": "0.0.9",
   "repository": {
     "type": "git",
-    "url": "git@github.com:samtsai/reveal-md.git#print_plugin_support"
+    "url": "git://github.com/webpro/reveal-md.git"
   },
   "bin": {
     "reveal-md": "bin/server-cli.js"
