Include 'colors' module in dependencies
The absence of this module was causing an undefined error whenever --print-pdf option was being called.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mustache": "0.4.0",
     "open": "0.0.3",
     "glob": "3.2.1",
-    "commander": "1.2.0"
+    "commander": "1.2.0",
+    "colors": "0.6.2"
   }
 }
