Update/clean deps

--- a/package.json
+++ b/package.json
@@ -19,11 +19,10 @@
   },
   "dependencies": {
     "reveal.js": "3.0.0",
-    "express": "4.11.0",
-    "mustache": "1.0.0",
+    "express": "4.12.3",
+    "mustache": "2.0.0",
     "open": "0.0.5",
-    "glob": "4.3.5",
-    "commander": "2.6.0",
-    "colors": "1.0.3"
+    "glob": "5.0.3",
+    "commander": "2.7.1"
   }
 }
