--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mustache": "2.0.0",
     "open": "0.0.5",
     "glob": "5.0.3",
-    "commander": "2.7.1"
+    "commander": "2.7.1",
+    "highlight.js": "8.7.0"
   }
 }
