--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "lint": "eslint bin"
   },
   "dependencies": {
-    "reveal.js": "3.4.1",
+    "commander": "2.9.0",
     "express": "4.14.1",
+    "glob": "7.1.1",
+    "highlight.js": "9.9.0",
+    "livereload": "^0.5.0",
     "mustache": "2.3.0",
     "open": "0.0.5",
-    "glob": "7.1.1",
-    "commander": "2.9.0",
-    "highlight.js": "9.9.0",
+    "reveal.js": "3.4.1",
     "yaml-front-matter": "^3.4.0"
   },
   "devDependencies": {
