docs: add MIT license to package.json

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "type": "git",
     "url": "git://github.com/webpro/reveal-md.git"
   },
+  "license": "MIT",
   "bin": {
     "reveal-md": "bin/cli.js"
   },
