--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mustache": "2.3.0",
     "open": "0.0.5",
     "reveal.js": "3.4.1",
+    "shelljs": "^0.7.7",
     "yaml-front-matter": "^3.4.0"
   },
   "devDependencies": {
