--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "glob": "7.1.1",
     "got": "^6.7.1",
     "highlight.js": "9.9.0",
+    "image-data-uri": "^1.0.0",
     "livereload": "^0.6.0",
     "lodash": "^4.17.4",
     "mustache": "2.3.0",
