Stand alone & Printout

--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "got": "^6.7.1",
     "highlight.js": "9.9.0",
     "image-data-uri": "^1.0.0",
+    "inliner": "^1.12.1",
     "livereload": "^0.6.0",
     "lodash": "^4.17.4",
+    "marked": "^0.3.6",
     "mustache": "2.3.0",
     "open": "0.0.5",
     "reveal.js": "3.4.1",
