--- a/package.json
+++ b/package.json
@@ -24,27 +24,27 @@
     "fix": "eslint bin lib --fix"
   },
   "dependencies": {
-    "bluebird": "^3.4.7",
+    "bluebird": "3.5.0",
     "commander": "2.9.0",
-    "express": "4.15.2",
-    "fs-extra": "^3.0.1",
-    "glob": "7.1.1",
-    "got": "^6.7.1",
-    "highlight.js": "9.11.0",
-    "image-data-uri": "^1.0.0",
-    "livereload": "^0.6.0",
-    "lodash": "^4.17.4",
+    "express": "4.15.3",
+    "fs-extra": "3.0.1",
+    "glob": "7.1.2",
+    "got": "7.0.0",
+    "highlight.js": "9.12.0",
+    "image-data-uri": "1.0.0",
+    "livereload": "0.6.2",
+    "lodash": "4.17.4",
     "mustache": "2.3.0",
     "open": "0.0.5",
     "reveal.js": "3.5.0",
-    "yaml-front-matter": "^3.4.0"
+    "yaml-front-matter": "3.4.0"
   },
   "devDependencies": {
-    "debug": "^2.6.1",
-    "eslint": "^3.15.0",
-    "eslint-plugin-import": "^2.2.0",
-    "expect": "^1.20.2",
-    "mocha": "^3.2.0"
+    "debug": "2.6.8",
+    "eslint": "4.0.0",
+    "eslint-plugin-import": "2.3.0",
+    "expect": "1.20.2",
+    "mocha": "3.4.2"
   },
   "engines": {
     "node": ">=4"
