--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   },
   "scripts": {
     "test": "mocha",
-    "lint": "eslint bin lib",
-    "fix": "eslint bin lib --fix"
+    "format": "prettier --write lib/**/*.js"
   },
   "dependencies": {
     "bluebird": "3.5.0",
@@ -41,10 +40,9 @@
   },
   "devDependencies": {
     "debug": "2.6.8",
-    "eslint": "4.2.0",
-    "eslint-plugin-import": "2.7.0",
     "expect": "1.20.2",
-    "mocha": "3.4.2"
+    "mocha": "3.4.2",
+    "prettier": "^1.7.4"
   },
   "engines": {
     "node": ">=4"
