--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
     "format": "prettier --write lib/**/*.js"
   },
   "dependencies": {
-    "bluebird": "3.5.0",
+    "bluebird": "3.5.1",
     "commander": "2.11.0",
-    "express": "4.15.3",
+    "express": "4.16.2",
     "fs-extra": "3.0.1",
     "glob": "7.1.2",
     "got": "7.1.0",
     "highlight.js": "9.12.0",
     "image-data-uri": "1.0.0",
-    "livereload": "0.6.2",
+    "livereload": "0.6.3",
     "lodash": "4.17.4",
     "mustache": "2.3.0",
     "open": "0.0.5",
@@ -42,7 +42,7 @@
     "debug": "2.6.8",
     "expect": "1.20.2",
     "mocha": "3.4.2",
-    "prettier": "^1.7.4"
+    "prettier": "1.7.4"
   },
   "engines": {
     "node": ">=4"
