--- a/.release-it.json
+++ b/.release-it.json
@@ -1,6 +1,6 @@
 {
-  "buildCommand": "cat gh-pages/index.yml README.md > dist/index.md",
   "dist": {
-    "repo": "git@github.com:webpro/reveal-md.git#gh-pages"
+    "repo": "https://github.com/webpro/reveal-md.git#gh-pages",
+    "beforeStageCommand": "cat ../gh-pages/index.yml ../README.md > index.md"
   }
 }
