--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lodash": "4.17.4",
     "mustache": "2.3.0",
     "open": "0.0.5",
+    "puppeteer": "^1.1.1",
     "reveal.js": "3.6.0",
     "yaml-front-matter": "3.4.0"
   },
@@ -50,6 +51,6 @@
     "prettier": "1.10.2"
   },
   "engines": {
-    "node": ">=4"
+    "node": ">=7.6.0"
   }
 }
