--- a/package.json
+++ b/package.json
@@ -29,27 +29,27 @@
   },
   "dependencies": {
     "bluebird": "3.5.1",
-    "commander": "2.13.0",
-    "express": "4.16.2",
+    "commander": "^2.15.1",
+    "express": "^4.16.3",
     "fs-extra": "3.0.1",
     "glob": "7.1.2",
-    "got": "8.0.3",
+    "got": "^8.3.0",
     "highlight.js": "9.12.0",
     "image-data-uri": "1.0.1",
-    "livereload": "0.6.3",
-    "lodash": "4.17.4",
+    "livereload": "^0.7.0",
+    "lodash": "^4.17.5",
     "mustache": "2.3.0",
     "open": "0.0.5",
-    "puppeteer": "^1.1.1",
+    "puppeteer": "^1.2.0",
     "reveal.js": "3.6.0",
-    "serve-favicon": "^2.4.5",
+    "serve-favicon": "^2.5.0",
     "yaml-front-matter": "3.4.0"
   },
   "devDependencies": {
     "debug": "3.1.0",
-    "expect": "22.1.0",
-    "mocha": "5.0.0",
-    "prettier": "1.10.2"
+    "expect": "^22.4.3",
+    "mocha": "^5.0.5",
+    "prettier": "^1.11.1"
   },
   "engines": {
     "node": ">=6"
