--- a/.release-it.json
+++ b/.release-it.json
@@ -1,4 +1,7 @@
 {
+  "github": {
+    "release": true
+  },
   "dist": {
     "repo": "https://github.com/webpro/reveal-md.git#gh-pages",
     "beforeStageCommand": "cat ../gh-pages/index.yml ../README.md > index.md"
