--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "lodash": "^4.17.5",
     "mustache": "2.3.0",
     "open": "0.0.5",
-    "puppeteer": "^1.2.0",
     "reveal.js": "3.6.0",
     "serve-favicon": "^2.5.0",
     "yaml-front-matter": "3.4.0"
+  },
+  "optionalDependencies": {
+    "puppeteer": "1.3.0"
   },
   "devDependencies": {
     "debug": "3.1.0",
