--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "livereload": "0.7.0",
     "lodash": "4.17.10",
     "mustache": "2.3.0",
-    "open": "0.0.5",
+    "opn": "5.3.0",
     "reveal.js": "3.6.0",
     "serve-favicon": "2.5.0",
     "yaml-front-matter": "4.0.0"
