--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "type": "git",
     "url": "git://github.com/webpro/reveal-md.git"
   },
+  "homepage": "https://github.com/webpro/reveal-md#readme",
+  "bugs": "https://github.com/webpro/reveal-md/issues",
   "license": "MIT",
   "bin": {
     "reveal-md": "bin/cli.js"
