--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "bugs": "https://github.com/webpro/reveal-md/issues",
   "license": "MIT",
   "bin": {
-    "reveal-md": "bin/cli.js"
+    "reveal-md": "bin/reveal-md.js"
   },
   "files": [
     "bin",
@@ -29,32 +29,36 @@
     "format": "prettier --write lib/**/*.js bin/*.js test/*.js *.md"
   },
   "dependencies": {
-    "bluebird": "3.5.3",
-    "commander": "2.19.0",
+    "debug": "4.1.1",
     "express": "4.16.4",
-    "fs-extra": "5.0.0",
+    "fs-extra": "7.0.1",
     "glob": "7.1.3",
-    "got": "8.3.2",
+    "got": "9.6.0",
     "highlight.js": "9.13.1",
-    "image-data-uri": "2.0.0",
     "livereload": "0.7.0",
     "lodash": "4.17.11",
     "mustache": "3.0.1",
     "opn": "5.4.0",
     "reveal.js": "3.7.0",
     "serve-favicon": "2.5.0",
-    "yaml-front-matter": "4.0.0"
+    "try-require": "1.2.1",
+    "update-notifier": "2.5.0",
+    "yaml-front-matter": "4.0.0",
+    "yargs-parser": "12.0.0"
   },
   "optionalDependencies": {
     "puppeteer": "1.3.0"
   },
   "devDependencies": {
-    "debug": "4.1.1",
-    "expect": "23.6.0",
+    "eslint": "5.12.1",
+    "eslint-config-prettier": "4.0.0",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-prettier": "3.0.1",
+    "expect": "24.0.0",
     "mocha": "5.2.0",
-    "prettier": "1.15.3"
+    "prettier": "1.16.1"
   },
   "engines": {
-    "node": ">=6"
+    "node": ">=8"
   }
 }
