--- a/package.json
+++ b/package.json
@@ -31,32 +31,32 @@
   },
   "dependencies": {
     "debug": "4.1.1",
-    "express": "4.16.4",
-    "fs-extra": "7.0.1",
-    "glob": "7.1.3",
+    "express": "4.17.1",
+    "fs-extra": "8.1.0",
+    "glob": "7.1.4",
     "got": "9.6.0",
-    "highlight.js": "9.13.1",
-    "livereload": "0.7.0",
-    "lodash": "4.17.11",
+    "highlight.js": "9.15.8",
+    "livereload": "0.8.0",
+    "lodash": "4.17.15",
     "mustache": "3.0.1",
-    "opn": "5.4.0",
-    "reveal.js": "3.7.0",
+    "open": "6.4.0",
+    "reveal.js": "3.8.0",
     "serve-favicon": "2.5.0",
     "try-require": "1.2.1",
-    "update-notifier": "2.5.0",
+    "update-notifier": "3.0.1",
     "yaml-front-matter": "4.0.0",
-    "yargs-parser": "13.0.0"
+    "yargs-parser": "13.1.1"
   },
   "optionalDependencies": {
     "puppeteer": "1.3.0"
   },
   "devDependencies": {
-    "bron": "1.0.0",
-    "eslint": "5.14.1",
-    "eslint-config-prettier": "4.0.0",
-    "eslint-plugin-import": "2.16.0",
-    "eslint-plugin-prettier": "3.0.1",
-    "prettier": "1.16.4"
+    "bron": "1.1.0",
+    "eslint": "6.1.0",
+    "eslint-config-prettier": "6.0.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-prettier": "3.1.0",
+    "prettier": "1.18.2"
   },
   "engines": {
     "node": ">=8"
