--- a/.release-it.json
+++ b/.release-it.json
@@ -1,6 +1,6 @@
 {
-  "scripts": {
-    "beforeStart": "npm run lint && npm test"
+  "hooks": {
+    "before:init": ["npm run lint", "npm test"]
   },
   "github": {
     "release": true
