--- a/package.json
+++ b/package.json
@@ -26,36 +26,36 @@
   ],
   "scripts": {
     "test": "bron test/*.spec.js",
-    "lint": "eslint lib/**/*.js",
+    "lint": "eslint lib test",
     "format": "prettier --write lib/**/*.js bin/*.js test/*.js *.md"
   },
   "dependencies": {
     "debug": "4.1.1",
     "express": "4.17.1",
-    "fs-extra": "8.1.0",
+    "fs-extra": "9.0.1",
     "glob": "7.1.6",
-    "highlight.js": "9.18.1",
+    "highlight.js": "10.0.3",
     "livereload": "0.8.2",
     "lodash": "4.17.15",
-    "mustache": "4.0.0",
-    "open": "7.0.2",
+    "mustache": "4.0.1",
+    "open": "7.0.4",
     "reveal.js": "3.9.2",
     "serve-favicon": "2.5.0",
     "try-require": "1.2.1",
     "update-notifier": "4.1.0",
     "yaml-front-matter": "4.1.0",
-    "yargs-parser": "17.0.0"
+    "yargs-parser": "18.1.3"
   },
   "optionalDependencies": {
     "puppeteer": "1.19.0"
   },
   "devDependencies": {
     "bron": "1.1.1",
-    "eslint": "6.8.0",
-    "eslint-config-prettier": "6.10.0",
-    "eslint-plugin-import": "2.20.1",
-    "eslint-plugin-prettier": "3.1.2",
-    "prettier": "1.19.1"
+    "eslint": "7.2.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-prettier": "3.1.3",
+    "prettier": "2.0.5"
   },
   "engines": {
     "node": ">=8"
