--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server",
     "cli"
   ],
-  "version": "3.5.0",
+  "version": "4.0.0-beta.0",
   "repository": {
     "type": "git",
     "url": "git://github.com/webpro/reveal-md.git"
