--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
   "scripts": {
     "test": "bron test/*.spec.js",
     "lint": "eslint lib test",
-    "format": "prettier --write lib/**/*.js bin/*.js test/*.js *.md"
+    "format": "prettier --write lib/**/*.js bin/*.js test/*.js *.md",
+    "release": "release-it"
   },
   "dependencies": {
     "debug": "4.1.1",
     "express": "4.17.1",
     "fs-extra": "9.0.1",
     "glob": "7.1.6",
-    "highlight.js": "10.0.3",
+    "highlight.js": "10.1.1",
     "livereload": "0.8.2",
     "lodash": "4.17.15",
     "mustache": "4.0.1",
@@ -53,9 +54,10 @@
     "bron": "1.1.1",
     "eslint": "7.2.0",
     "eslint-config-prettier": "6.11.0",
-    "eslint-plugin-import": "2.20.2",
-    "eslint-plugin-prettier": "3.1.3",
-    "prettier": "2.0.5"
+    "eslint-plugin-import": "2.21.2",
+    "eslint-plugin-prettier": "3.1.4",
+    "prettier": "2.0.5",
+    "release-it": "13.6.3"
   },
   "engines": {
     "node": ">=8"
