Update master → main branch name

--- a/.github/workflows/publish-container.yaml
+++ b/.github/workflows/publish-container.yaml
@@ -5,12 +5,12 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - 'master'
+      - 'main'
     tags:
       - '*'
   pull_request:
     branches:
-      - 'master'
+      - 'main'
 
 jobs:
   build:
