--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
     "fs-extra": "11.1.1",
     "glob": "8.1.0",
     "highlight.js": "11.9.0",
+    "json5": "2.2.3",
     "livereload": "0.9.3",
     "lodash": "4.17.21",
     "mustache": "4.2.0",
     "open": "8.4.2",
     "reveal.js": "4.5.0",
     "serve-favicon": "2.5.0",
-    "try-require": "1.2.1",
     "update-notifier": "5.1.0",
     "yaml-front-matter": "4.1.1",
     "yargs-parser": "21.1.1"
