--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server",
     "cli"
   ],
-  "version": "6.0.0-next.1",
+  "version": "6.0.0",
   "repository": {
     "type": "git",
     "url": "git://github.com/webpro/reveal-md.git"
