Introduce built-in opt-in Mermaid feature (diagrams/charts)

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "json5": "2.2.3",
     "livereload": "0.9.3",
     "lodash": "4.17.21",
+    "mermaid": "10.8.0",
     "mustache": "4.2.0",
     "open": "10.0.3",
     "reveal.js": "5.0.4",
