--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@eslint/js": "9.9.1",
     "eslint": "9.9.1",
     "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import-x": "4.1.1",
     "eslint-plugin-prettier": "5.2.1",
     "globals": "15.9.0",
     "prettier": "3.3.3",
