--- a/package.json
+++ b/package.json
@@ -32,36 +32,36 @@
     "release": "release-it"
   },
   "dependencies": {
-    "debug": "4.3.4",
+    "debug": "4.3.6",
     "express": "4.19.2",
     "fs-extra": "11.2.0",
-    "glob": "10.3.15",
-    "highlight.js": "11.9.0",
+    "glob": "11.0.0",
+    "highlight.js": "11.10.0",
     "json5": "2.2.3",
     "livereload": "0.9.3",
     "lodash": "4.17.21",
-    "mermaid": "10.9.1",
+    "mermaid": "11.0.2",
     "mustache": "4.2.0",
     "open": "10.1.0",
     "reveal.js": "5.1.0",
     "serve-favicon": "2.5.0",
-    "update-notifier": "7.0.0",
+    "update-notifier": "7.2.0",
     "yaml-front-matter": "4.1.1",
     "yargs-parser": "21.1.1"
   },
   "optionalDependencies": {
-    "puppeteer": "22.9.0"
+    "puppeteer": "23.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.1.0",
-    "@eslint/js": "9.3.0",
-    "eslint": "9.3.0",
+    "@eslint/js": "9.9.1",
+    "eslint": "9.9.1",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-prettier": "5.1.3",
-    "globals": "15.3.0",
-    "prettier": "3.2.5",
-    "release-it": "17.2.1"
+    "eslint-plugin-import-x": "4.1.1",
+    "eslint-plugin-prettier": "5.2.1",
+    "globals": "15.9.0",
+    "prettier": "3.3.3",
+    "release-it": "17.6.0"
   },
   "engines": {
     "node": ">=18"
