--- a/.github/workflows/pkg-pr-new.yml
+++ b/.github/workflows/pkg-pr-new.yml
@@ -13,4 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: npx pkg-pr-new publish
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - run: npx --yes pkg-pr-new publish
