--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "version": "6.1.3",
   "repository": {
     "type": "git",
-    "url": "git://github.com/webpro/reveal-md.git"
+    "url": "https://github.com/webpro/reveal-md.git"
   },
   "homepage": "https://github.com/webpro/reveal-md#readme",
   "bugs": "https://github.com/webpro/reveal-md/issues",
